--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Hello, I am zho</h1>
+      <h1 class="mr-2">Welcome</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -40,23 +40,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </svg>
       </a>
 
-      <p>
-        Welcome to this blog. Thanks for reading :) 
-        <br>
-        Disclaimer : All posts in this blog are based on my personal experiences
-      </p>
-      <!-- {
-        // only display if at least one social link is enabled
-        socialCount > 0 && (
-          <div class="social-wrapper">
-            <div class="social-links">Social Links:</div>
-            <Socials />
-          </div>
-        )
-      } -->
+      <div class="social-wrapper">
+        <div class="social-links">Support Me:</div>
+        <a href="https://saweria.co/zhorahmatt" target="_blank">Saweria</a>
+      </div>
     </section>
+    <Hr/>
 
-    <Hr />
+    
 
     <!-- {
       featuredPosts.length > 0 && (
